# Reckless

./: .gitignore  CONTRIBUTING  CONTRIBUTORS  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml  train.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/wasm-check/: check.mjs  positions.txt
.github/workflows/: architectures.yml  check_bench.yml  games.yml  pgo.yml  release.yml  rust.yml  wasm_check.yml  webhook.yml
data/: bench.txt
docs/: README.md  search-metrics.md  testing.md
engine/: Cargo.toml
engine/src/: commands.rs  engine.rs  evaluation.rs  main.rs  parser.rs  perft.rs  search.rs  sorting.rs  uci.rs
evaluation/: Cargo.toml
evaluation/src/: lib.rs  location.rs  locations.rs  material.rs  mobility.rs  weights.rs
game/: Cargo.toml
game/src/: board.rs  core.rs  lib.rs  lookup.rs
game/tests/: leapers.rs  pawns.rs  positions.rs  sliders.rs
networks/: model.nnue
scripts/: compare-profilebench.py  fetch-nnue.ps1  fetch-nnue.sh
search/: Cargo.toml
search/src/: alphabeta.rs  cache.rs  history_moves.rs  iterative.rs  killer_moves.rs  lib.rs  negamax.rs  (+4 more)
src/: board.rs  cache.rs  engine.rs  evaluate.rs  evaluation.rs  ffi.rs  history.rs  lib.rs  lmr.rs  lookup.rs  main.rs  masks.rs  metrics.rs  misc.rs  movepick.rs  nnue.rs  numa.rs  parameters.rs  params.py  perft.rs  pruning.rs  rfp.rs  search.rs  setwise.rs  stack.rs  tb.rs  thread.rs  threadpool.rs  time.rs  time_control.rs  timeman.rs  transposition.rs  tuning.rs  types.rs  uci.rs  wasm.rs
tests/: leapers.rs  positions.rs  sliders.rs
(+155 files in other folders)
