[package]
name = "reckless"
version = "0.9.0-dev"
edition = "2024"
build = "build/build.rs"
publish = false

[features]
default = ["syzygy", "spsa"]
syzygy = []
numa = []
spsa = []

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[build-dependencies]
cc = "1.2.19"
bindgen = "0.71.1"

[dependencies]
libc = "0.2.175"
